k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    istio-injection: enabled
