k8s/00-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mosstech
  labels:
    istio-injection: enabled
