k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alexos
  labels:
    istio-injection: enabled
