k8s/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - name: ${APP_NAME}
          image: ${IMAGE_NAME}:${CI_COMMIT_SHA}
          ports:
            - name: web
              containerPort: 32080
            - name: metrics
              containerPort: 9145
          workingDir: /app
          volumeMounts:
            - mountPath: /var/cache/nginx/data
              name: cache-volume
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 250Mi
      volumes:
        - name: cache-volume
          emptyDir: {}
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: ${APP_NAME}
              topologyKey: "kubernetes.io/hostname"
            weight: 100
