k8s/mosstech-nginx-v2.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}-nginx-v2
  labels:
    name: ${APP_NAME}-nginx
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: ${APP_NAME}-nginx
        version: v2
    spec:
      containers:
      - name: ${APP_NAME}-nginx
        image: ${BUILD_IMAGE}:${IMAGE_VERSION}
        ports:
        - containerPort: 80
        workingDir: /app
      restartPolicy: Always
---
