k8s/mosstech-v2.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}-v2
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        version: v2
    spec:
      containers:
      - name: ${APP_NAME}
        image: ${BUILD_IMAGE}:${IMAGE_VERSION}
        ports:
        - containerPort: 80
        workingDir: /app
      restartPolicy: Always
---
