k8s/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-svc
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
    - port: 32080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-metrics
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
    - port: 9145
      name: metrics
---
apiVersion: v1
kind: Service 
metadata:     
  name: ${APP_NAME}-istio
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
  - name: istio-proxy
    port: 15020
    protocol: TCP
