k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alexos
spec:
  type: ClusterIP
  ports:
    - port: 32080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: alexos-metrics
spec:
  type: ClusterIP
  selector:
    app: alexos
  ports:
    - port: 9145
      name: metrics
