k8s/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}-ing
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: ${APP_NAME}-tls
      hosts:
        - ${DOMAIN}
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.${DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    # some hard-coded entries I've chosen to send here also
    - host: alexos.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.alexos.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.alexmoss.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.mosses.info
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.alexos.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
    - host: www.alexos.info
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 32080
