k8s/03-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}-ing
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: ${APP_NAME}-tls
    hosts:
    - ${DOMAIN}
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APP_NAME}-svc
          servicePort: 32080
  - host: www.{DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APP_NAME}-svc
          servicePort: 32080
