k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alexos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: alexos-tls
      hosts:
        - alexos.dev
        - www.alexos.dev
        - mosstech.io
        - www.mosstech.io
        - alexos.io
        - www.alexos.io
        - www.alexmoss.co.uk
        - www.mosses.info
  rules:
    - host: alexos.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: www.alexos.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: mosstech.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: www.mosstech.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: alexos.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: www.alexos.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: www.alexmoss.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
    - host: www.mosses.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexos
                port:
                  name: http
