k8s/istio.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
spec:
  host: ${APP_NAME}-svc.${NAMESPACE}.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
spec:
  hosts:
  - ${APP_NAME}-svc.${APP_NAME}.svc.cluster.local
  http:
  - route:
    - destination:
        host: ${APP_NAME}-svc.${NAMESPACE}.svc.cluster.local
        subset: v1
      weight: 80
  - route:
    - destination:
        host: ${APP_NAME}-svc.${NAMESPACE}.svc.cluster.local
        subset: v2
      weight: 20
---
